<resources>
    <string name="app_name">MVVM Architecture Pattern</string>
    <string name="str_hint_edt_name">Enter Name</string>
    <string name="str_hint_edt_email">Enter Email</string>
    <string name="str_name">Name:</string>
    <string name="str_email">Email:</string>
    <string name="str_get_from_api">Get From API</string>
    <string name="str_update_value">Update Value</string>
    <string name="str_go_to_second_activity">Go to Second Activity</string>">
    <string name="str_one_way_data_binding">One-way data binding</string>
    <string name="str_two_way_data_binding">Two-way data binding</string>
    <string name="str_description">(To see Two-way data binding)</string>
    <string name="title_first">First</string>
    <string name="title_second">Second</string>
    <string name="title_setting">Setting</string>
    <string name="title_language">Language</string>
    <string name="str_setting_fragment">Setting Fragment</string>
    <string name="str_language_fragment">Language Fragment</string>
    <string name="str_setting_language">Setting Language</string>
    <string name="str_value">60</string>
    <string name="str_value_title">(Value need to send to Language Fragment)</string>
    <string name="str_value_received_title">(Value received from Setting Fragment)</string>
</resources>