<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.bangnv.mvvmarchitecturepattern.viewmodels.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.WeatherActivity">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/str_one_way_data_binding"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/_56dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_30dp"
            android:autofillHints=""
            android:imeOptions="actionNext"
            android:hint="@string/str_hint_edt_name"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="@dimen/_56dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:autofillHints=""
            android:hint="@string/str_hint_edt_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_name" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_30dp"
            android:background="@color/light_gray"
            android:padding="16dp"
            android:text="@{viewModel.userData.username}"
            android:textSize="@dimen/_20sp"
            app:layout_constraintTop_toBottomOf="@id/prb_loading" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@color/light_gray"
            android:padding="@dimen/_16dp"
            android:text="@{viewModel.userData.email}"
            android:textSize="@dimen/_18sp"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />


        <Button
            android:id="@+id/btn_get_from_api"
            android:layout_width="@dimen/_200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:text="@string/str_get_from_api"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email" />

        <Button
            android:id="@+id/btn_update_value"
            android:layout_width="@dimen/_200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/str_update_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_get_from_api" />

        <ProgressBar
            android:id="@+id/prb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_30dp"
            app:layout_constraintTop_toBottomOf="@id/edt_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
