<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.bangnv.mvvmarchitecturepattern.viewmodels.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.WeatherActivity">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/str_two_way_data_binding"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/_56dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_30dp"
            android:autofillHints=""
            android:hint="@string/str_hint_edt_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:text="@={viewModel.userData.username}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="@dimen/_56dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:autofillHints=""
            android:hint="@string/str_hint_edt_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.userData.email}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_name" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_30dp"
            android:background="@color/light_gray"
            android:padding="16dp"
            android:text="@{viewModel.userData.username}"
            android:textSize="@dimen/_20sp"
            app:layout_constraintTop_toBottomOf="@id/edt_email" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@color/light_gray"
            android:padding="@dimen/_16dp"
            android:text="@{viewModel.userData.email}"
            android:textSize="@dimen/_18sp"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
